	  overwrite permissions; was sometimes writing an empty file, plus
	  other issues.
	(--apache-auth-realm=STRING): new name for the
	  --apache-auth-db-prompt=STRING option; the old name has been
	  removed. The new default value is "UNCONFIGURED". Man page POD
	  and '-h' help message have been updated to reflect these
	  changes.

	Changes to allow the user to specify user and group ownership of
	/most/ created files:
	* src/main/perl/bin/bedrock-create-site.in:
	(--owner=OWNER): new command line opt
	(--group=GROUP): new command line opt
	($TO_OWNER_NAME): new global var
	($TO_GROUP_NAME): new global var
	(__poor_mans_touch): new function, like touch(1) for Perl
	(__chown_chgrp_all): new function, enhanced wrapper for Perl's
	  'chown' function
	(__create_directories_or_die): now returns list of directories
	  actually created
	(__maybe_create_site_subdirs_or_die): likewise
	(__maybe_create_site_directory_or_die): now returns a boolean
	  indicating whether or not the site directory needed to be created
	(maybe_create_site_directory_tree_or_die): Now changes user and
	  group ownershipt of all newly created directories
	(__maybe_create_named_file_or_die): now returns a boolean
	  indicating whether or not the file named by the MAINFILE param
	  needed to be created
	(maybe_create_tagx_dot_xml_or_die): now changes the user and group
	  ownership of the tagx.xml file, iff the file was newly created.
	(maybe_create_tagx_apps_dot_xml_or_die): likewise, but for the
	  tagx_apps.xml file
	(maybe_create_index_dot_rock_or_die): likewise, but for the
	  $sitedr/htdocs/index.rock file
	(maybe_create_admin_index_dot_rock_or_die): likewise, but for the
	  $sitedr/htdocs/admin/index.rock file
	(maybe_copy_dist_error_dot_rock_or_die): likewise, but for the
	  $sitedir/htdocs/error.rock file
	(maybe_create_apache_mod_perl_startup_dot_pl_file_or_die):
	  likewise, but for the apache site's mod_perl startup.pl-style file