@@ -1575,6 +1575,13 @@ sub maybe_copy_dist_bedrock_dot_cgi_or_die {
     my $mode = ( stat( $bedrockcgi ))[2];
 
     my $newbits = 0;
+
+    $newbits |= S_IRUSR unless ( $mode & S_IRUSR );
+    $newbits |= S_IXUSR unless ( $mode & S_IXUSR );
+
+    $newbits |= S_IRGRP unless ( $mode & S_IRGRP );
+    $newbits |= S_IXGRP unless ( $mode & S_IXGRP );
+
     $newbits |= S_IROTH unless ( $mode & S_IROTH );
     $newbits |= S_IXOTH unless ( $mode & S_IXOTH );
     if ( $newbits ) {
