@@ -12,6 +12,9 @@
 	  removed. The new default value is "UNCONFIGURED". Man page POD
 	  and '-h' help message have been updated to reflect these
 	  changes.
+	(maybe_copy_dist_bedrock_dot_cgi_or_die): ensure that newly copied
+	  file is readable and executable by its user and group; previously
+	  were only ensuring this for "other".
 
 	Changes to allow the user to specify user and group ownership of
 	/most/ created files:
